k8s/workflow-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: workflow-service
  template:
    metadata:
      labels:
        app: workflow-service
    spec:
      containers:
        - name: workflow-service
          image: workflow-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8091
          readinessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8091
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8091
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "384Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: workflow-service
spec:
  selector:
    app: workflow-service
  ports:
    - port: 8091
      targetPort: 8091
